--- a/resources/notFound.html
+++ b/resources/notFound.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome To Golang Web</h1>
-    <h2></h2>
+    <h1>Not Found 404</h1>
 </body>
 </html>
